Remove Docker Dependency

--- a/Auditing-POC/appsettings.json
+++ b/Auditing-POC/appsettings.json
@@ -25,8 +25,8 @@
         ]
     },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        //"DefaultConnection": "Server=localhost;Port=5432;Database=Wapel_Auditing;User Id=admin;Password=admin1234;Include Error Detail=true"
-        "DefaultConnection": "Server=postgresdb;Port=5432;Database=Wapel_Auditing;User Id=admin;Password=admin1234;Include Error Detail=true"
-    }
+  "ConnectionStrings": {
+    //"DefaultConnection": "Server=localhost;Port=5432;Database=App_Auditing;User Id=admin;Password=admin1234;Include Error Detail=true"
+    "DefaultConnection": "Data Source=Auditing.db"
+  }
 }
