--- a/Auditing-POC/Properties/launchSettings.json
+++ b/Auditing-POC/Properties/launchSettings.json
@@ -1,15 +1,5 @@
 {
   "profiles": {
-    "http": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5175"
-    },
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
@@ -19,30 +9,7 @@
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7076;http://localhost:5175"
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "publishAllPorts": true,
-      "useSSL": true
     }
   },
-  "$schema": "https://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:42376",
-      "sslPort": 44325
-    }
-  }
+  "$schema": "https://json.schemastore.org/launchsettings.json"
 }
